@@ -10,6 +10,7 @@ gncscm_DATA = \
   hello-world.scm \
   iframe-url.scm \
   income-expense-graph.scm \
+  net-barchart.scm \
   net-worth-timeseries.scm \
   pnl.scm \
   portfolio.scm \
